08-kuber/13/deployment/network-policy/np-frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
        app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 1280
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
